# metaflow-phala

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/metaflow_extensions/phala/plugins/: __init__.py  phala_cli.py  phala_client.py  phala_decorator.py
tests/: test_hello_flow.py  test_unit.py
